<resources>
    <string name="app_name">GeoLockr</string>
    <string name="welcome_message">Welcome to GeoLockr!\nHow would you like to lock your device?</string>
    <string name="location_button">Until I get to my destination</string>
    <string name="destination_button">While I\'m at my current location</string>
    <string name="driving_button">While I\'m driving</string>
    <string name="current_button">Where am I?</string>

    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="preference_file_key">com.nikm3.geolockr.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">No current location</string>
    <string name="geofence_not_available">Geofence service is not available</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">Provided too many PendingIntents</string>
    <string name="unknown_geofence_error">Unknown error: the Geofence service is not currently available</string>
    <string name="geofence_entered">Geofence entered.</string>
    <string name="channel_name">GeofenceStatus</string>
    <string name="geofence_entered_user">You\'ve reached your destination!\nUnlocking device.</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="geofence_left_user">You have left your lockdown location!\nDevice unlocked.</string>
    <string name="emergency_unlock_button">Emergency Unlock</string>
    <string name="current_lock_message">Device will unlock once you are %.1f meters away from your current location\n(%s, %s)</string>
    <string name="destination_lock_message">Device will unlock when you reach your destination of %s, %s</string>
    <string name="geofence_added">Successfully made geofence</string>
    <string name="geofences_not_added">Failed to create geofence</string>
    <string name="location_required_error">Location services are required for this app</string>
</resources>