<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/welcome_message"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center_horizontal|top"
            android:orientation="vertical">

            <Button
                android:id="@+id/currentLocationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination_button" />

            <Button
                android:id="@+id/unstilDestinationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_button" />

            <Button
                android:id="@+id/drivingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driving_button" />

            <Button
                android:id="@+id/whereButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_button" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>